# sh-datrun-dp

./: .gitignore  .pre-commit-config.yaml  Brewfile  README.md
.github/workflows/: lambda-package.yml
firestore-to-s3/: README.md  pyproject.toml
firestore-to-s3/src/: .envrc.example  firestore_client.py  lambda_handler.py  s3_client.py  utils.py
