[project]
name = "firestore-to-s3-exporter"
version = "0.1.0"
description = "This package deals with exporting data from firestore to s3."
authors = [
    {name = "haojunsng",email = "snghaojun18@gmail.com"}
]
readme = "README.md"
requires-python = "3.13.4"
dependencies = [
    "boto3 (>=1.38.33,<2.0.0)",
    "firebase-admin (>=6.9.0,<7.0.0)",
    "pytest (>=8.4.0,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
